Revert "revert: "fix(Button): Fix prefix and suffix alignments""
This reverts commit 8a18c7b6edb547d7849db63cde2fd8bf98e68728.

--- a/src/components/Button/Button.st.css
+++ b/src/components/Button/Button.st.css
@@ -255,7 +255,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
-    display: inline-block;
+    display: inline-flex;
 }
 
 .root:mobile:upgrade{
@@ -354,4 +354,42 @@
 
 .root:upgrade:size(large):mobile, .root:priority(primary):upgrade:size(large):mobile, .root:priority(basic):upgrade:size(large):mobile{
     padding: calculate(string(-), 17px, value(secondaryBorderWidth)) 16px;
+}
+
+.root .affixIcon svg path {
+    fill: none;
+}
+
+.root:priority(primary) .affixIcon svg path {
+    stroke: value(PrimaryTextColor);
+}
+
+.root:priority(secondary) .affixIcon svg path {
+    stroke: value(SecondaryTextColor);
+}
+
+.root:priority(basic) .affixIcon svg path {
+    stroke: value(PrimaryTextColor);
+}
+
+.root:priority(basicSecondary) .affixIcon svg path {
+    stroke: value(BasicSecondaryTextColor);
+}
+
+.affixIcon {
+    height: 1.5em;
+    width: 1.5em;
+    display: flex;
+}
+
+.affixIcon svg {
+    width: 100%;
+    height: 100%;
+}
+
+.prefix-icon::after, .suffix-icon::before {
+    content: '';
+    width: 4px;
+    height: 1px;
+    display: inline-block;
 }
